Add cognito auth to secured
